--- a/Reflection/App.config
+++ b/Reflection/App.config
@@ -1,6 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <configSections>
+    <section name="ProgramSettings" type="Reflection.Configuration+SettingsSection, Reflection"/>
+  </configSections>
+  <startup> 
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+  </startup>
+  <ProgramSettings IntSetting="123" StrSetting="456">
+    <clear/>
+    <add SubSetting="Name" SubSettingValue="value"/>
+    <add SubSetting="Test1" SubSettingValue="123"/>
+    <add SubSetting="Test2" SubSettingValue="456"/>
+    <add SubSetting="Test3" SubSettingValue="789"/>
+  </ProgramSettings>
 </configuration>
